imgur hosting part 1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="projects/parking-puzzle.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_parking-puzzle.gif">
+          <img width="100%" src="https://i.imgur.com/cmlwRr9.gif">
         </div>
         <div class="rollingtitle largetext">
           • Parking Puzzle • Parking Puzzle • Parking Puzzle 
@@ -57,7 +57,7 @@
     <a href="projects/save-the-dinos.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_save-the-dinos.gif">
+          <img width="100%" src="https://i.imgur.com/lrnOTm7.gif">
         </div>
         <div class="rollingtitle largetext">
           • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
@@ -79,7 +79,7 @@
     <a href="projects/synthetictriggers.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_st.gif">
+          <img width="100%" src="https://i.imgur.com/CiER3GE.gif">
         </div>
         <div class="rollingtitle largetext">
           • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
@@ -99,7 +99,7 @@
     <a href="projects/cotg.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_cotg.gif">
+          <img width="100%" src="https://i.imgur.com/G1qwW3x.gif">
         </div>
         <div class="rollingtitle largetext">
           • Creation of the Glove • Creation of the Glove • Creation of the Glove
@@ -118,7 +118,7 @@
     <a href="projects/icosa.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_icosa.gif">
+          <img width="100%" src="https://i.imgur.com/5wQGsQu.gif">
         </div>
         <div class="rollingtitle largetext">
           • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
@@ -197,7 +197,7 @@
     <a href="projects/butterflyeffect.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_butterfly.gif">
+          <img width="100%" src="https://i.imgur.com/8nmEdCi.gif">
         </div>
         <div class="rollingtitle largetext">
           • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
@@ -217,7 +217,7 @@
     <a href="projects/gradshow16.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="thumbs/thumb_gradshow.gif">
+          <img width="100%" src="https://i.imgur.com/ZtBHmLc.gif">
         </div>
         <div class="rollingtitle largetext">
           • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
