--- a/projects/butterflyeffect.html
+++ b/projects/butterflyeffect.html
@@ -53,16 +53,16 @@
         The collection:
       </div>
       <div class="gallery" style="order: 2">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit1_detalj.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit1_helbild.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit2_detalj.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit2_helbild.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit3_detalj.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit3_helbild.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit4_detalj.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit4_helbild.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit5_detalj.jpg">
-        <img width="100%" class="imggrid" src="img/butterflyeffect/outfit5_helbild.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/Dcq0LiZ.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/6MVEFO3.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/g6mbJpg.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/izxpQ2a.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/kru2303.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/C68EUmI.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/ibJ2izg.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/Ss2VFy8.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/PF3rrMj.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/sI0whSZ.jpg">
       </div>
     </div>
     
