--- a/projects/cotg.html
+++ b/projects/cotg.html
@@ -51,7 +51,7 @@
         Poster for the video:
       </div>
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="img/cotg/cotg_poster.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/S6OVwvO.jpg">
       </div>
     </div>
 
@@ -62,10 +62,10 @@
       </div>
 
       <div class="gallery" style="order: 2">
-        <img width="100%" class="imggrid" src="img/cotg/cotg_fabric.gif">
-        <img width="100%" class="imggrid" src="img/cotg/cotg_hand.gif">
-        <img width="100%" class="imggrid" src="img/cotg/cotg_compositing.gif">
-        <img width="100%" class="imggrid" src="img/cotg/cotg_set.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/LuUrfho.gif">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/wqz3DQz.gif">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/SDSVfMX.gif">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/hWppXGy.jpg">
       </div>
     </div>
 
