--- a/projects/sadventures.html
+++ b/projects/sadventures.html
@@ -44,7 +44,7 @@
       </div>
 
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="img/celsing/poster_helbild.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/wwfkgGk.jpg">
       </div>
     </div>
 
@@ -54,10 +54,10 @@
       </div>
 
       <div class="gallery">
-        <img width="100%" class="imggrid" src="img/celsing/detalj_1.jpg">
-        <img width="100%" class="imggrid" src="img/celsing/detalj_2.jpg">
-        <img width="100%" class="imggrid" src="img/celsing/detalj_3.jpg">
-        <img width="100%" class="imggrid" src="img/celsing/detalj_4.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/Wb7ASSB.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/SIKAd3L.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/bYydW9s.jpg">
+        <img width="100%" class="imggrid" src="https://i.imgur.com/HnqNVQP.jpg">
       </div>
     </div>
 
