--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
 
   <div class="mainwrap">
 
+    <a href="projects/midnight-road.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="https://i.imgur.com/D4DJG4H.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+          • Midnight Road • Midnight Road • Midnight Road 
+
+        </div>
+      </div>
+    </a>
+
     <a href="projects/parking-puzzle.html">
       <div class="projectrow">
         <div class="thumbnail">
