--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="projects/midnight-road.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/D4DJG4H.gif">
+          <img width="100%" src="thumbs/thumb_midnight-road.gif">
         </div>
         <div class="rollingtitle largetext">
           • Midnight Road • Midnight Road • Midnight Road 
@@ -59,7 +59,7 @@
     <a href="projects/parking-puzzle.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/cmlwRr9.gif">
+          <img width="100%" src="thumbs/thumb_parking-puzzle.gif">
         </div>
         <div class="rollingtitle largetext">
           • Parking Puzzle • Parking Puzzle • Parking Puzzle 
@@ -79,7 +79,7 @@
     <a href="projects/save-the-dinos.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/lrnOTm7.gif">
+          <img width="100%" src="thumbs/thumb_save-the-dinos.gif">
         </div>
         <div class="rollingtitle largetext">
           • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
@@ -101,7 +101,7 @@
     <a href="projects/synthetictriggers.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/CiER3GE.gif">
+          <img width="100%" src="thumbs/thumb_st.gif">
         </div>
         <div class="rollingtitle largetext">
           • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
@@ -121,7 +121,7 @@
     <a href="projects/cotg.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/G1qwW3x.gif">
+          <img width="100%" src="thumbs/thumb_cotg.gif">
         </div>
         <div class="rollingtitle largetext">
           • Creation of the Glove • Creation of the Glove • Creation of the Glove
@@ -140,7 +140,7 @@
     <a href="projects/icosa.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/5wQGsQu.gif">
+          <img width="100%" src="thumbs/thumb_icosa.gif">
         </div>
         <div class="rollingtitle largetext">
           • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
