--- a/projects/midnight-road.html
+++ b/projects/midnight-road.html
@@ -53,9 +53,9 @@
       </div>
 
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="https://i.imgur.com/OZoGd6R.jpg">
-        <img width="100%" class="imggrid" src="https://i.imgur.com/bHzHvuP.jpg">
-        <img width="100%" class="imggrid" src="https://i.imgur.com/CwWNuZe.jpg">
+        <img width="100%" class="imggrid" src="img\midnight-road\Midnight-Road-Screenshot-1.jpg">
+        <img width="100%" class="imggrid" src="img\midnight-road\Midnight-Road-Screenshot-2.jpg">
+        <img width="100%" class="imggrid" src="img\midnight-road\Midnight-Road-Screenshot-3.jpg">
       </div>
     </div>
 
