--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <a href="projects/butterflyeffect.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/8nmEdCi.gif">
+          <img width="100%" src="thumbs/thumb_butterfly.gif">
         </div>
         <div class="rollingtitle largetext">
           • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
@@ -239,7 +239,7 @@
     <a href="projects/gradshow16.html">
       <div class="projectrow">
         <div class="thumbnail">
-          <img width="100%" src="https://i.imgur.com/ZtBHmLc.gif">
+          <img width="100%" src="thumbs/thumb_gradshow.gif">
         </div>
         <div class="rollingtitle largetext">
           • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
