--- a/projects/cotg.html
+++ b/projects/cotg.html
@@ -65,7 +65,7 @@
         <img width="100%" class="imggrid" src="img\cotg\cotg_fabric.gif">
         <img width="100%" class="imggrid" src="img\cotg\cotg_hand.gif">
         <img width="100%" class="imggrid" src="img\cotg\cotg_compositing.gif">
-        <img width="100%" class="imggrid" src="img\cotg\cotg_set.gif">
+        <img width="100%" class="imggrid" src="img\cotg\cotg_set.jpg">
       </div>
     </div>
 
