--- a/projects/kryohabitat.html
+++ b/projects/kryohabitat.html
@@ -38,7 +38,7 @@
     <div class="contentwrap">
 
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="img/cryohabitat/kryohabitat.jpg">
+        <img width="100%" class="imggrid" src="img/kryohabitat/kryohabitat.jpg">
       </div>
 
       <div class="contentdescription fliporder">
@@ -50,7 +50,7 @@
         While waiting for that, the cryohabitat will be their new home.
         <br><br>
         I made digital sculptures of the 16 coral species an 3D-printed them for a physical interpretation of the
-        cryohabitat. This was part of an exhibition at Svenskt Tenn in Stockholm January 2017.
+        kryohabitat. This was part of an exhibition at Svenskt Tenn in Stockholm January 2017.
         Feel free to download the model pack <a style="color: blue" href="https://www.thingiverse.com/thing:2033856/"
           target="_blank"><u>here</u></a>.
       </div>
@@ -59,32 +59,32 @@
 
     <div class="contentwrap">
 
-      Acropora Florida<img width="100%" src="img/cryohabitat/kryohabitat_1.jpg" class="rowspace">
-      Acropora Cytherea<img width="100%" src="img/cryohabitat/kryohabitat_2.jpg" class="rowspace">
-      Acropora Cervicornis<img width="100%" src="img/cryohabitat/kryohabitat_3.jpg" class="rowspace">
-      Acropora Hyacinthus<img width="100%" src="img/cryohabitat/kryohabitat_4.jpg" class="rowspace">
-      Acropora Loripes<img width="100%" src="img/cryohabitat/kryohabitat_5.jpg" class="rowspace">
-      Acropora Millepora<img width="100%" src="img/cryohabitat/kryohabitat_6.jpg" class="rowspace">
-      Acropora Nobilis<img width="100%" src="img/cryohabitat/kryohabitat_7.jpg" class="rowspace">
-      Acropora Palmata<img width="100%" src="img/cryohabitat/kryohabitat_8.jpg" class="rowspace">
-      Acropora Sarmentosa<img width="100%" src="img/cryohabitat/kryohabitat_9.jpg" class="rowspace">
-      Acropora Tenuis<img width="100%" src="img/cryohabitat/kryohabitat_10.jpg" class="rowspace">
-      Acropora Fungia Scutaria<img width="100%" src="img/cryohabitat/kryohabitat_11.jpg" class="rowspace">
-      Goniastrea Aspera<img width="100%" src="img/cryohabitat/kryohabitat_12.jpg" class="rowspace">
-      Montipora Capitata<img width="100%" src="img/cryohabitat/kryohabitat_13.jpg" class="rowspace">
-      Platygyra Daedalea<img width="100%" src="img/cryohabitat/kryohabitat_14.jpg" class="rowspace">
-      Platygyra Lamellina<img width="100%" src="img/cryohabitat/kryohabitat_15.jpg" class="rowspace">
-      Pocillopora Meandrina<img width="100%" src="img/cryohabitat/kryohabitat_16.jpg" class="rowspace">
+      Acropora Florida<img width="100%" src="img/kryohabitat/kryohabitat_0.jpg" class="rowspace">
+      Acropora Cytherea<img width="100%" src="img/kryohabitat/kryohabitat_1.jpg" class="rowspace">
+      Acropora Cervicornis<img width="100%" src="img/kryohabitat/kryohabitat_2.jpg" class="rowspace">
+      Acropora Hyacinthus<img width="100%" src="img/kryohabitat/kryohabitat_3.jpg" class="rowspace">
+      Acropora Loripes<img width="100%" src="img/kryohabitat/kryohabitat_4.jpg" class="rowspace">
+      Acropora Millepora<img width="100%" src="img/kryohabitat/kryohabitat_5.jpg" class="rowspace">
+      Acropora Nobilis<img width="100%" src="img/kryohabitat/kryohabitat_6.jpg" class="rowspace">
+      Acropora Palmata<img width="100%" src="img/kryohabitat/kryohabitat_7.jpg" class="rowspace">
+      Acropora Sarmentosa<img width="100%" src="img/kryohabitat/kryohabitat_8.jpg" class="rowspace">
+      Acropora Tenuis<img width="100%" src="img/kryohabitat/kryohabitat_9.jpg" class="rowspace">
+      Acropora Fungia Scutaria<img width="100%" src="img/kryohabitat/kryohabitat_10.jpg" class="rowspace">
+      Goniastrea Aspera<img width="100%" src="img/kryohabitat/kryohabitat_11.jpg" class="rowspace">
+      Montipora Capitata<img width="100%" src="img/kryohabitat/kryohabitat_12.jpg" class="rowspace">
+      Platygyra Daedalea<img width="100%" src="img/kryohabitat/kryohabitat_13.jpg" class="rowspace">
+      Platygyra Lamellina<img width="100%" src="img/kryohabitat/kryohabitat_14.jpg" class="rowspace">
+      Pocillopora Meandrina<img width="100%" src="img/kryohabitat/kryohabitat_15.jpg" class="rowspace">
 
       <div class="contentdescription" style="order: 1">
         Process:
       </div>
 
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="img/cryohabitat/process_zbrush_1.jpg">
-        <img width="100%" class="imggrid" src="img/cryohabitat/process_zbrush_2.jpg">
-        <img width="100%" class="imggrid" src="img/cryohabitat/process_single.jpg">
-        <img width="100%" class="imggrid" src="img/cryohabitat/process_closeup.jpg">
+        <img width="100%" class="imggrid" src="img/kryohabitat/process_zbrush_1.jpg">
+        <img width="100%" class="imggrid" src="img/kryohabitat/process_zbrush_2.jpg">
+        <img width="100%" class="imggrid" src="img/kryohabitat/process_single.jpg">
+        <img width="100%" class="imggrid" src="img/kryohabitat/process_closeup.jpg">
       </div>
 
     </div>
