--- a/projects/synthetictriggers.html
+++ b/projects/synthetictriggers.html
@@ -50,7 +50,7 @@
       </div>
 
       <div style="order:1">
-        <video width="100%" src="img\synthetic_triggers\synthetic-triggers-objects.mp4" type="video/mp4" loop
+        <video width="100%" src="img\synthetic_triggers\synthetic-triggers-objects.mp4" type="video/mp4" disableRemotePlayback loop
           autoplay="autoplay" muted></video>
       </div>
 
