--- a/projects/cotg.html
+++ b/projects/cotg.html
@@ -61,9 +61,9 @@
       </div>
 
       <div class="gallery" style="order: 6">
-        <video width="100%" src="img\cotg\cotg_fabric.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
-        <video width="100%" src="img\cotg\cotg_hand.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
-        <video width="100%" src="img\cotg\cotg_compositing.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img\cotg\cotg_fabric.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img\cotg\cotg_hand.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img\cotg\cotg_compositing.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img\cotg\cotg_set.jpg">
       </div>
     </div>
