--- a/projects/gradshow16.html
+++ b/projects/gradshow16.html
@@ -51,23 +51,23 @@
         All visuals:
       </div>
       <div class="gallery" style="order: 2">
-        <video width="100%" src="img/gradshow16/1_Filippa-Borenius-4.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/1_Filippa-Borenius-4.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Filippa_Borenius5.jpg">
-        <video width="100%" src="img/gradshow16/4_Marika-Ekblad-5.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/4_Marika-Ekblad-5.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Marika_Ekblad1.jpg">
-        <video width="100%" src="img/gradshow16/5_Caroline-Brendov-6.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/5_Caroline-Brendov-6.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Caroline_Brendov3.jpg">
-        <video width="100%" src="img/gradshow16/6_Petra-Norden-7.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/6_Petra-Norden-7.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Petra_Norden1.jpg">
-        <video width="100%" src="img/gradshow16/8_Anna-Scholz-8.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/8_Anna-Scholz-8.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Anna_Scholz7.jpg">
-        <video width="100%" src="img/gradshow16/9_Olle-Daunfeldt-9.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/9_Olle-Daunfeldt-9.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Olle_Daunfeldt2.jpg">
-        <video width="100%" src="img/gradshow16/11_Isabelle-Larsson-Knobel-1.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/11_Isabelle-Larsson-Knobel-1.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Isabelle_Larsson_Knobel1.jpg">
-        <video width="100%" src="img/gradshow16/12_livia-Schuck-2.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/12_livia-Schuck-2.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Livia_Schuck4.jpg">
-        <video width="100%" src="img/gradshow16/15_Amanda-Blom-3.mp4" type="video/mp4" loop autoplay="autoplay" muted></video>
+        <video width="100%" src="img/gradshow16/15_Amanda-Blom-3.mp4" type="video/mp4" disableRemotePlayback loop autoplay="autoplay" muted></video>
         <img width="100%" class="imggrid" src="img/gradshow16/Amanda_Blom5.jpg">
       </div>
     </div>
