--- a/projects/midnight-road.html
+++ b/projects/midnight-road.html
@@ -41,14 +41,14 @@
         Play the game <a style="color: blue" href="https://marcusnystrand.itch.io/midnight-road" target="_blank"><u>here</u></a>!
       </div>
 
-      <div class='embed-container-16-9 rowspace'>
+      <div class='embed-container-16-9'>
         <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
           src="https://player.vimeo.com/video/466297857" frameborder="0" allow="autoplay; encrypted-media"
           allowfullscreen></iframe>
       </div>
 
 
-      <div class="contentdescription rowspace" style="order: 3">
+      <div class="contentdescription" style="order: 3">
         Screenshots:
       </div>
 
