--- a/projects/sadventures.html
+++ b/projects/sadventures.html
@@ -50,7 +50,7 @@
         <img width="100%" class="imggrid" src="img\sadventures\poster_helbild.jpg">
       </div>
 
-      <div class="contentdescription rowspace" style="order: 3">
+      <div class="contentdescription" style="order: 3">
         Details:
       </div>
 
