--- a/projects/synthetictriggers.html
+++ b/projects/synthetictriggers.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
@@ -50,8 +49,8 @@
       </div>
 
       <div style="order:1">
-        <video width="100%" src="img\synthetic_triggers\synthetic-triggers-objects.mp4" type="video/mp4" disableRemotePlayback loop
-          autoplay="autoplay" muted></video>
+        <video width="100%" src="img\synthetic_triggers\synthetic-triggers-objects.mp4" type="video/mp4"
+          disableRemotePlayback loop autoplay="autoplay" muted></video>
       </div>
 
       <div class="contentdescription fliporder">
