--- a/projects/meursault.html
+++ b/projects/meursault.html
@@ -21,6 +21,7 @@
   <title>Marcus Nystrand</title>
   <meta name="description" content="Marcus Nystrand">
   <meta name="author" content="SitePoint">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/mediaquerys.css">
