--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
 
     <div class="mainwrap">
 
+      <a href="projects/the-trip.html">
+        <div class="projectrow">
+          <div class="thumbnail">
+            <video width="100%" src="thumbs/thumb_the-trip.mp4" type="video/mp4" disableRemotePlayback loop
+              autoplay="autoplay" muted></video>
+          </div>
+          <div class="rollingtitle largetext">
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+            • The Trip • The Trip • The Trip • The Trip 
+          </div>
+        </div>
+      </a>
+
+
       <a href="projects/midnight-road.html">
         <div class="projectrow">
           <div class="thumbnail">
@@ -55,7 +74,6 @@
             • Midnight Road • Midnight Road • Midnight Road
             • Midnight Road • Midnight Road • Midnight Road
             • Midnight Road • Midnight Road • Midnight Road
-
           </div>
         </div>
       </a>
@@ -265,7 +283,7 @@
         </div>
       </a>
 
-      <a href="projects/meursault.html">
+<!--       <a href="projects/meursault.html">
         <div class="projectrow">
           <div class="thumbnail">
             <img width="100%" src="thumbs/thumb_meursault.jpg">
@@ -282,7 +300,7 @@
             • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
           </div>
         </div>
-      </a>
+      </a> -->
 
     </div>
     <br><br>
