--- a/projects/the-trip.html
+++ b/projects/the-trip.html
@@ -57,7 +57,7 @@
       </div>
 
       <div class="contentdescription" style="order: 5">
-        For Trip 19 they created a glass and mirror world where they needed sharp and hard-surfaced objects.
+        For Trip 19 they created a glass and mirror world where they needed hard-surfaced and glowing objects.
       </div>
 
       <div style="order: 6">
