--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <div class="about">
   Bachelor's Degree of Fine Arts at Beckmans College of Design, Visual Communication programme. 
   Heavily interested in game development, motion design and 3D illustration. 
-  Currently working as a production artist at an advertising agency.
+  Currently working at <a href="https://www.fasttravelgames.com/" target="_blank"><u>Fast Travel Games</u></a>.
   <br><br>
 
 <a href="CV_Marcus_Nystrand_2020-12-01.pdf" target="_blank"><u>Click here for CV</u></a>
